update pack with plugins

--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Masonry grid</title>
     <link type="text/css" rel="stylesheet" href="./css/compiled/masonry.css">
+    <script type="text/javascript" src="./js/compiled/common.js"></script>
     <script type="text/javascript" src="./js/compiled/Masonry.js"></script>
 </head>
 
@@ -66,7 +67,7 @@
         xs: [-Infinity, 768]
     };
 
-    let masonryGrid = new Masonry.init('#masonry', col, res);
+    let masonryGrid = new Masonry('#masonry', col, res);
 </script>
 </body>
 </html>
