add stylus postCSS & clean compiled folder, update example

--- a/example/index.html
+++ b/example/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Masonry grid</title>
-    <link type="text/css" rel="stylesheet" href="./compiled/style.css">
-    <script type="text/javascript" src="./compiled/common.js"></script>
-    <script type="text/javascript" src="./compiled/Masonry.js"></script>
+    <link type="text/css" rel="stylesheet" href="./compiled/css/styles.css">
+    <script type="text/javascript" src="./compiled/js/common.js"></script>
+    <script type="text/javascript" src="./compiled/js/Masonry.js"></script>
 </head>
 
 <body>
